Change upload message when importing reports, and fix more squished elements on smaller screen resolutions

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -49,6 +49,13 @@
 #file-group {
     width: 100%;
 }
+@media (max-width: 992px) {
+    .input-group {
+        width: 90%;
+        margin: auto;
+    }
+}
+
 
 #module-opts {
     display: inline-block;
